Changed title & heading

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="ip, address, location, flag"
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User IP Address and Location</title>
+  <title>IP Address & Location</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body {
@@ -46,7 +46,7 @@
 </head>
 <body>
 <header>
-  <h1>User IP & Location</h1>
+  <h1>IP Address & Location</h1>
 </header>
 <div class="container">
   <div class="info">
