--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Lets the user know his IP Address and the geographical location it reflects.">
-  <meta name="keywords" content="ip, address, location, flag"
+  <meta name="keywords" content="ip, address, location, flag">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IP Address & Location</title>
